# Macula

./: .gitignore  CLAUDE.md  CLAUDE_SESSIONS.md  README.md  RPi5_SETUP.md  SETUP.md  VPS_INERTIAL_ARCHITECTURE.md  main.py  requirements.txt  setup_orin.sh  setup_rpi5.sh
Desktop-App/: .gitignore  DESKTOP_APP.md  SETUP.md  dev.bat  index.html  package-lock.json  package.json
Desktop-App/src/: App.tsx
Desktop-App/src-tauri/: Cargo.toml  tauri.conf.json
Desktop-App/src-tauri/capabilities/: default.json
Desktop-App/src-tauri/src/: lib.rs  main.rs
Desktop-App/src-tauri/src/commands/: mod.rs  profile.rs  satellite.rs  ssh.rs
Desktop-App/src/components/: Layout.tsx
Desktop-App/src/lib/: tauri.ts  types.ts
Desktop-App/src/pages/: Dashboard.tsx  Devices.tsx  Maps.tsx  Models.tsx  Onboarding.tsx  Settings.tsx  Upload.tsx
config/: params.yaml
estimator/: eskf.py  imu_preintegrator.py  mavlink_bridge.py
shared/: camera_source.py  fix_quality.py  matcher.py  region_map.py  tracker.py  vo_estimator.py
tests/: conftest.py  test_camera_source.py  test_eskf.py  test_fix_quality.py  test_imu_preintegrator.py  test_matcher.py  test_mavlink_bridge.py  test_region_map.py  test_tracker.py  test_vo_estimator.py
tools/: calibrate.py  display.py  prepare_region.py  replay_eval.py  time_sync.py
