[package]
name = "macula-desktop"
version = "0.1.0"
description = "Macula VPS Configuration App"
authors = ["Macula"]
edition = "2021"

[lib]
name = "macula_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
ssh2 = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
dirs = "5"
base64 = "0.22"
anyhow = "1"
